<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- global -->
    <string name="app_name">LaererbookingSystem</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_text_cancel">Annuller</string>

    <!-- login -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="textview_text_username">Brugernavn</string>
    <string name="textview_text_password">Adgangskode</string>
    <string name="button_text_register">Registrer</string>
    <string name="button_text_login">Login</string>

    <!-- register -->
    <string name="title_activity_register">Register</string>
    <string name="textview_text_firstname">Fornavn</string>
    <string name="textview_text_lastname">Efternavn</string>
    <string name="textview_text_email">Email</string>
    <string name="textview_text_repeat_password">Gentag Adgangskode</string>

    <!-- booking -->
    <string name="title_activity_booking">BookingActivity</string>
    <string name="textview_text_subject">Fag</string>
    <string name="textview_text_date">Dato</string>
    <string name="textview_text_time">Tid</string>

    <!-- newBooking -->
    <string name="title_activity_booking_new">NewBookingActivity</string>
    <string name="button_text_create">Opret</string>
    <string name="textview_text_comments">Indtast kommentar</string>


</resources>
