<dk.eal.learerbookingsystem.view.RegisterView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.RegisterActivity"
    android:background="@drawable/abc_ab_solid_dark_holo">

    <GridLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ab_bottom_solid_example"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="70dp"
        android:paddingBottom="70dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_text_firstname"
        android:id="@+id/textViewFirstname"
        android:layout_gravity="center_vertical"
        android:textColor="@android:color/white"
        android:layout_column="0"
        android:layout_row="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextFirstname"
            android:layout_row="0"
            android:layout_column="1"
            android:textColor="@android:color/white"
            android:layout_gravity="fill_horizontal"
            android:enabled="true"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_text_lastname"
            android:id="@+id/textViewLastname"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/white"
            android:layout_column="0"
            android:layout_row="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextLastname"
            android:layout_row="1"
            android:layout_column="1"
            android:textColor="@android:color/white"
            android:layout_gravity="fill_horizontal"
            android:enabled="true"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_text_email"
            android:id="@+id/textViewEmail"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/white"
            android:layout_column="0"
            android:layout_row="2"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextEmail"
            android:layout_row="2"
            android:layout_column="1"
            android:textColor="@android:color/white"
            android:layout_gravity="fill_horizontal"
            android:enabled="true"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/textview_text_password"
            android:id="@+id/textViewPassword"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/white"
            android:layout_column="0"
            android:layout_row="3"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/editTextPassword"
            android:layout_row="3"
            android:layout_column="1"
            android:textColor="@android:color/white"
            android:layout_gravity="fill_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_text_repeat_password"
            android:id="@+id/textViewRepeatPassword"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/white"
            android:layout_column="0"
            android:layout_row="4"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/editTextRepeatPassword"
            android:layout_row="4"
            android:layout_column="1"
            android:textColor="@android:color/white"
            android:layout_gravity="fill_horizontal"/>
    </GridLayout>

    <View android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#303030"
        android:layout_alignParentBottom="true"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:measureWithLargestChild="false">

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/button_text_cancel"
            android:id="@+id/buttonCancel"
            android:layout_weight="1"
            style="?android:attr/buttonBarStyle"
            android:layout_gravity="center"
            android:textColor="@android:color/white"/>

        <View android:layout_height="fill_parent"
            android:layout_width="1dp"
            android:background="#303030"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/button_text_register"
            android:id="@+id/buttonRegister"
            android:layout_weight="1"
            style="?android:attr/buttonBarStyle"
            android:layout_gravity="center"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</dk.eal.learerbookingsystem.view.RegisterView>
