<dk.eal.learerbookingsystem.view.BookingView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewBookingActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".NewBookingActivity"
        android:measureWithLargestChild="false"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
      <Spinner
        android:id="@+id/spinner_subject"
        android:layout_width="match_parent"
        android:layout_height="48dp"
          android:spinnerMode="dropdown"
          style="@style/Widget.AppCompat.Light.Base.DropDownItem.Spinner"
          android:entries="@array/spinner_subjects"
          android:layout_gravity="center"/>

        <Spinner
            android:id="@+id/spinner_chose_date"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:spinnerMode="dropdown"
            style="@style/Widget.AppCompat.Light.Base.DropDownItem.Spinner"
            android:entries="@array/spinner_subjects"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <Spinner
                android:id="@+id/spinner_chose_starttime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                style="@style/Widget.AppCompat.Light.Base.DropDownItem.Spinner"
                android:entries="@array/spinner_subjects"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/activity_horizontal_margin" />

            <Spinner
                android:id="@+id/spinner_chose_endtime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                style="@style/Widget.AppCompat.Light.Base.DropDownItem.Spinner"
                android:entries="@array/spinner_subjects"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/activity_horizontal_margin" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_text_comments"
            android:id="@+id/textViewComments"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_marginTop="@dimen/activity_vertical_margin" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/editTextComments"
            android:layout_gravity="fill_horizontal"
            android:enabled="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:inputType="textMultiLine"
            android:text="test" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:measureWithLargestChild="false"
        android:background="@drawable/abc_ab_solid_dark_holo">

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/button_text_cancel"
            android:id="@+id/buttonCancel"
            android:layout_weight="1"
            style="?android:attr/buttonBarStyle"
            android:layout_gravity="center"
            android:textColor="@android:color/white"/>

        <View android:layout_height="fill_parent"
            android:layout_width="1dp"
            android:background="#303030"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/button_text_create"
            android:id="@+id/buttonCreate"
            android:layout_weight="1"
            style="?android:attr/buttonBarStyle"
            android:layout_gravity="center"
            android:textColor="@android:color/white"/>
    </LinearLayout>





</dk.eal.learerbookingsystem.view.BookingView>

